Issue 8: change to use built in Base64 encoder.